# Maezo

./: .dockerignore  .env.dev  .env.dev.windows  .env.example  .env.local  .env.prod.example  .env.swarm.local  .gitignore  CONTRIBUTING.md  Dockerfile.cdc-bridge  Dockerfile.contract-extraction  Dockerfile.debezium  Dockerfile.fhir-sync  Dockerfile.hapi-fhir  Dockerfile.webhook-receiver  Dockerfile.worker  Dockerfile_bkp  MAP.md  Makefile  PROJECT.md  README.md  REBRAND_COMPLETE.md  REBRAND_SUMMARY.md  REBRAND_VERIFICATION.md  TECHNICAL_FIXES.md  TIER2_COMPLETION_REPORT.md  compose.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.swarm.local.yml  docker-compose.swarm.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  relatorio_integracao.html
.github/workflows/: bpmn-integration-test.yml  bpmn-validation.yml  ci-cd.yaml
.hive-mind/sessions/: hive-mind-prompt-hive-1770644078928.txt
Legacy processes/bpmn/: SUB_03_Atendimento_Clinico.bpmn  SUB_05_Coding_Audit.bpmn  SUB_08_Revenue_Collection.bpmn  SUB_10_Maximization.bpmn
Legacy processes/workers/: README.md
Past Camunda8 src/revenue_cycle/: main.py
config/: correlation_keys.yaml  topic_registry.yaml
config/cib7/: default.yml
config/debezium/: debezium-entrypoint.sh  oracle-connector.json
config/hapi-fhir/: application.yaml
config/hapi_fhir/: application.yaml
config/json-exporter/: cib7.yml
config/keycloak/: austa-bpm-realm.json
config/postgres/: init.sql
config/prometheus/: prometheus.yml
docker/: compose.infra.yml  compose.integration.yml  compose.observability.yml  compose.workers.yml
docs/: BPMN_STANDARDIZATION_REPORT.md  COPAY_WORKER_FIX_ANALYSIS.md  DMN_INTEGRATION_QUICK_START.md  DMN_PATIENT_ACCESS_VALIDATION_REPORT.txt  DMN_PATIENT_ACCESS_WIRING.md  FINAL_GENERATION_REPORT.md  HANDOFF_2025-02-10.md  HANDOFF_2026-02-12.md  MESSAGE_EVENT_CATALOG.md  PHASE_11_VALIDATION_REPORT.md  Past session dialog.md  TECHNICAL_FIXES.md  billing-workers-phase-2.3.md  revenue_cycle_collection_workers_21-30.md
docs/ADRs/: 001-cib-seven-as-bpm-engine.md  002-single-engine-tenant-markers.md  003-python-external-task-workers.md  004-debezium-cdc-erp-integration.md  005-hapi-fhir-r4-canonical-store.md  007-dmn-federation-tenant-overrides.md  008-keycloak-oauth2-workers.md  009-mono-repo-folder-per-concern.md  010-observability-stack.md  011-lgpd-history-ttl-variable-by-reference.md  013-claude-flow-swarm-intelligence.md  014-webhook-receivers-async-callbacks.md  017-anti-pattern-enforcement.md  019-bpmn-compliance-mandatory.md
docs/Agents handoffs/: HANDOFF.yaml
docs/Migration/: CIB7_WORKER_TEMPLATE.md  DMN_CATEGORY_MAPPING.md  INDEX.md  LEGACY_DMN_MIGRATION_STRATEGY.md  MANIFEST_QUICK_REFERENCE.md  MANIFEST_SUMMARY.md  MIGRATION_COMPARISON_Camunda8_to_CIB7.md  MIGRATION_SUMMARY.md  QUICK_START_GUIDE.md  migration_manifest.json
docs/Pendencias para desenvolvedores/: pendencias-desenvolvedores.md
docs/Regras de Negocio (PT-BR)/: BUSINESS_RULES_COMPLETE_FILE_LISTING.md  BUSINESS_RULES_INVENTORY_REPORT.md
docs/Technical specification/: QUICK_REFERENCE.md  SUMMARY.md  SWARM_EXECUTION_STRATEGY.md  technical-specification.md
docs/adr/: 001-cib-seven-as-bpm-engine.md  006-kafka-rest-bridge-only.md  010-observability-stack.md  012-engine-replicas-phased.md  014-webhook-receivers-async-callbacks.md  015-worker-archetypes-dmn-delegation.md  016-topic-naming-convention.md  017-anti-pattern-enforcement.md  018-atomization-blueprint.md  019-bpmn-compliance-mandatory.md  020-basic-auth-sem-keycloak.md
docs/architecture/: MAEZO-Arquitetura-2026.html  domain3_justification.html  gap_analysis_presentation.html  revenue_cycle_inventory.html  rpa-authorization-flow.html  stub_analysis_presentation.html
docs/archive/: ADR-008-keycloak-superseded.md  EXAMPLE_MIGRATION_validate_eligibility_worker.py  INVENTORY-workers-v0.md  README-archive.md  WORKER-3-COMPLETION-REPORT.md
docs/audit/: AP-FIX-FINAL-MISSION-REPORT.md  AP-FIX-METRICS-SUMMARY.md  AP-FIX-VALIDATION-CHECKLIST.md  BILLING_WORKERS_FIX_SUMMARY.md  CLIN_BATCH1_REFACTOR_REPORT.md  CODING_WORKERS_TEST_FIX_SUMMARY_2026-02-15.md  CODING_WORKERS_V2_VERIFICATION_REPORT.md  CODING_WORKER_TEST_FIX_SUMMARY.md  DMN_LAEN_TIER2_AUDIT_2026-02-11.md  GLOSA_TEST_FIXES_2026-02-15.md  HANDOFF_OPTIMIZATION_2026-02-16.md  PA-2_PATIENT_ACCESS_BATCH2_STATUS.md  PA_WORKERS_V2_COMPLETION_REPORT.md  REVENUE_CYCLE_DEEP_AUDIT.md  (+11 more)
helm/: README.md
processes/: README.md
revenue_cycle/: __init__.py
scripts/: create_missing_qsofa.py  diagnose_instance.py  find_missing_dmn.py  generate_migration_manifest.py  generate_missing_dmn.py  get_incomplete_dmn.py  load_test_rc.py  migrate_dmn.py  refactor_clinical_workers_to_v2.py  seed_fhir_dev.py  start_rc002_instance.py  start_rc002_instance.py.bak  start_rc_instances.py  stub_cibseven.py  test_rpa_call.py  update_migration_manifest_domains.py  validate_bpmn_worker_connectivity.py  validate_dmn.py  verify_dmn_completeness.py
tests/: README.md  __init__.py  conftest.py  pytest.ini
(+4323 files in other folders)
