[project]
name = "maestro-healthcare-platform"
version = "1.0.0"
description = "Plataforma de Orquestração Hospitalar - Workers CIB Seven"
requires-python = ">=3.11,<3.13"
license = {text = "Proprietary"}

dependencies = [
    "httpx>=0.27,<1.0",
    "tenacity>=8.2,<10.0",
    "structlog>=24.1,<25.0",
    "pydantic>=2.6,<3.0",
    "prometheus-client>=0.20,<1.0",
    "camunda-external-task-client-python3>=4.5,<5.0",
    "python-keycloak>=3.9,<5.0",
    "opentelemetry-api>=1.23,<2.0",
    "opentelemetry-sdk>=1.23,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.9,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["healthcare_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "dmn: marks DMN decision table tests",
    "bpmn: marks BPMN-specific tests",
    "slow: marks tests as slow-running",
    "requires_engine: marks tests that require a live CIB7 engine",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
