[project]
name = "maestro-healthcare-platform"
version = "1.0.0"
description = "Plataforma de Orquestração Hospitalar - Workers CIB Seven"
requires-python = ">=3.11,<3.13"
license = {text = "Proprietary"}

dependencies = [
    # HTTP / async
    "httpx>=0.27,<1.0",
    "aiohttp>=3.9,<4.0",
    # Retry / resilience
    "tenacity>=8.2,<10.0",
    # Logging
    "structlog>=24.1,<25.0",
    # Data validation / settings
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    # CIB Seven External Task client
    "camunda-external-task-client-python3>=4.5,<5.0",
    # Database
    "asyncpg>=0.29,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    # Kafka
    "aiokafka>=0.11,<1.0",
    # Web framework (service layer + ce_api)
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    # Observability
    "opentelemetry-api>=1.23,<2.0",
    "opentelemetry-sdk>=1.23,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.23,<2.0",
    "prometheus-client>=0.20,<1.0",
    # Cryptography (LGPD signing)
    "cryptography>=42.0,<45.0",
    # Templates (DMN / contract extraction)
    "jinja2>=3.1,<4.0",
    # ML (predict_collection_date_worker)
    "scikit-learn>=1.4,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.9,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/healthcare_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "dmn: marks DMN decision table tests",
    "bpmn: marks BPMN-specific tests",
    "slow: marks tests as slow-running",
    "requires_engine: marks tests that require a live CIB7 engine",
    "e2e: marks end-to-end tests that require Docker environment running",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    # Cosmeticos - modernizacao typing (migracao futura, nao afeta runtime)
    "UP006",   # Use `dict` instead of `Dict` - backcompat com 3.8 typing
    "UP007",   # Use `X | Y` instead of `Union[X, Y]`
    "UP035",   # `typing.Dict` is deprecated
    "UP045",   # Use `X | None` for type annotations
    "UP017",   # Use `datetime.UTC` alias
    # Cosmeticos - whitespace (autofix futuro)
    "W291",    # Trailing whitespace
    "W292",    # No newline at end of file
    "W293",    # Whitespace before ':'
    # Import order (autofix futuro com ruff format)
    "I001",    # Import block is un-sorted or un-formatted
    # Line length relaxada para 120
    "E501",    # Line too long (handled by line-length = 120)
    # Simplificacoes opcionais (nao sao bugs, melhorar incrementalmente)
    "SIM102",  # Collapsible if
    "SIM108",  # Use ternary operator
    "SIM105",  # Use contextlib.suppress
    "SIM103",  # Return boolean directly
    "SIM114",  # Combine if branches with same body
    "UP042",   # Replace StrEnum
    "N806",    # Variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
# __init__.py pode ter imports nao usados (re-exports)
"__init__.py" = ["F401"]
# Testes podem ter imports nao usados (fixtures) e asserts sem msg
"tests/**" = ["F401", "F841"]
# Backup v1 workers - nao lintear
"*/_v1_backup/**" = ["ALL"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
